убрал фиксацию хедера,исправил проподание кнопки закрытия меню

--- a/src/partials/01header.html
+++ b/src/partials/01header.html
@@ -47,7 +47,7 @@
   
 
   <div class="burger-menu" data-menu>
-    <button type="button" class="burger-menu__btn">
+    <button type="button" class="burger-menu-btn">
       Buy now
       <svg class="burger-menu-btn__logo" width="6" height="8">
         <use href="./images/sprite.svg#icon-btn-arrow"></use>
