--- a/src/sass/layouts/_01header.scss
+++ b/src/sass/layouts/_01header.scss
@@ -1,22 +1,18 @@
 .header {
   position: absolute;
   width: -webkit-fill-available;
-  background: $hero-background-color;
-  z-index: 2;
-
-  @include tablet {
-    position: fixed;
-    width: -webkit-fill-available;
-    background-color: transparent;
-    z-index: 3;
-  }
+  background-color: transparent;
+  z-index: 1;
 }
+
 .header-scroll {
+  // display: none;
   @include desktop {
     position: fixed;
     z-index: 3;
   }
 }
+
 .header-container {
   display: flex;
   justify-content: space-between;
@@ -44,20 +40,23 @@
   }
 }
 
-.burger-menu__icon-close {
+.menu__close-icon {
   position: absolute;
-  top: 10px;
-  right: 15px;
-  z-index: 7;
+  top: 20px;
+  right: 20px;
+  z-index: 4;
+  @include tablet {
+    right: 32px;
+  }
 }
 
-.menu-btn .menu-btn__close {
+.menu-btn .menu-close-btn {
   display: none;
 
   fill: $mob-menu-background;
 }
 
-.menu-btn.is-open .menu-btn__close {
+.menu-btn.is-open .menu-close-btn {
   display: block;
 }
 
